2013-09-06  Darshit Shah  <darnir@gmail.com>

	* WgetTest.py (CommonMethods.__check_downloaded_files): Print a
	unified diff in case there is a mismatch in the file contents

2013-09-06  Darshit Shah  <darnir@gmail.com>

	* HTTPServer.py (WgetHTTPRequestHandler.test_cookies): Comment out the
	old test_cookies code. This is no longer used and was causing problems
	with expected cookies. The code will soon be removed anyways
	* Test-cookie.py: Add new test for basic cookie functionality
	* Test-cookie-401.py: Ensure cookies are saved during a 401 response
	* Test-cookie-expires.py: Ensure that the Expires field is correctly
	handled
	* Test-cookies-domain-mismatch.py: Ensure that mismatched domains are
	handled by Wget
	* Makefile.am: Add the new tests

2013-09-06  Darshit Shah  <darnir@gmail.com>

	* README: New section on pending work. Will keep updating this to keep
	track of work that remains to be done on this implementation

2013-09-05  Darshit Shah  <darnir@gmail.com>

	* Test-auth-with-content-disposition.py: Add test that ensures Content
	Disposition works alongwith authentication
	* Makefile.am: Add new test

2013-09-04  Darshit Shah  <darnir@gmail.com>

	* Test-c-full.py: Test Continue options
	* Makefile.am: Add Test-c-full.py and Test-O

2013-09-02  Darshit Shah  <darnir@gmail.com>

	* Makefile.am:	Add new Test
	* Test-Head.py: New Test to ensure HEAD requests are handled correctly

2013-08-31  Darshit Shah  <darnir@gmail.com>

	* README: Explain that TEST_NAME needs to be unique
	* Test-auth-no-challenge.py: Edit non-unique TEST_NAME

2013-08-31  Darshit Shah  <darnir@gmail.com>

	* HTTPTest.py (ServerError): Define new Exception for handling
	internal control flow.
	(StoppableHTTPServer.SendHeader): Simply pass. Do nothing. Adding
	functionality here seems to crash for no apparent reason.
	(stoppableHTTPServer.send_cust_headers): Minor optimization. No need
	for extra variable.
	(__Handler.Response): Handle explicit Response Code Rules